# Cloister_os

./: README.md
backend/: .env  .env.example  Dockerfile  alembic.ini  company_os.db  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/api/: deps.py
backend/app/middleware/: audit.py  cors.py  rate_limit.py
backend/app/models/: __init__.py  announcement.py  audit_log.py  base.py  document.py  equipment.py  inspection.py  inventory.py  maintenance.py  message.py  notification.py  property.py  role.py  schedule.py  settings.py  tenant.py  user.py  vendor.py
backend/app/repositories/: __init__.py  audit_log_repository.py  base.py  document_repository.py  employee_repository.py  equipment_repository.py  inventory_repository.py  lease_repository.py  maintenance_request_repository.py  message_repository.py  notification_repository.py  property_repository.py  schedule_repository.py  settings_repository.py  tenant_repository.py  unit_repository.py  user_repository.py  vendor_repository.py  work_order_repository.py
backend/app/schemas/: __init__.py  ai.py  analytics.py  audit_log.py  auth.py  common.py  document.py  employee.py  equipment.py  inventory.py  lease.py  maintenance.py  message.py  notification.py  property.py  report.py  schedule.py  settings.py  tenant.py  unit.py  user.py  vendor.py  work_order.py
backend/app/services/: __init__.py  ai_service.py  analytics_service.py  (+20 more)
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py  factories.py  test_health.py
(+93 files in other folders)
